isort imports, include django21 and 20

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 env:
   - DJANGO="1.11"
   - DJANGO="2.0"
+  - DJANGO="2.1"
   - DJANGO="master"
 matrix:
   include:
@@ -25,22 +26,27 @@ matrix:
       dist: xenial
       env: DJANGO="master"
   allow_failures:
-    - python: "3.4"
-      env: DJANGO="2.0"
-    - python: "3.4"
-      env: DJANGO="master"
     - python: "3.5"
-      env: DJANGO="2.0"
+      env: DJANGO="2.1"
     - python: "3.5"
       env: DJANGO="master"
     - python: "3.6"
-      env: DJANGO="2.0"
+      env: DJANGO="2.1"
     - python: "3.6"
       env: DJANGO="master"
+    - python: "3.7"
+      sudo: required
+      dist: xenial
+      env: DJANGO="2.1"
     - python: "3.7"
       env: DJANGO="master"
       sudo: required
       dist: xenial
+  exclude:
+    - python: "3.4"
+      env: DJANGO="2.1"
+    - python: "3.4"
+      env: DJANGO="master"
 after_success: codecov
 install: pip install tox-travis codecov
 script: tox
