--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-django111, py{34,35,36,37}-django{111,20,_master}
+envlist = py27-django111, py{34,35,36,37}-django{111,20,21,_master}
 
 [testenv]
 usedevelop=True
@@ -7,6 +7,7 @@ deps=
     coverage
     django111: django>=1.11a1,<1.12
     django20: Django>=2.0a1,<2.1
+    django21: Django>=2.1,<2.2
     django_master: https://github.com/django/django/archive/master.tar.gz
     mock
     pytest
@@ -26,4 +27,5 @@ unignore_outcomes = True
 DJANGO =
     1.11: django111
     2.0: django2.0
+    2.1: django2.1
     master: django_master
