--- a/.travis.yml
+++ b/.travis.yml
@@ -1,47 +1,27 @@
-sudo: false
+dist: xenial
 language: python
 python:
-  - "3.4"
-  - "3.5"
-  - "3.6"
+  - "3.8"
 env:
-  - DJANGO="1.11"
-  - DJANGO="2.2"
-  - DJANGO="master"
+  - DJANGO_PAYMENTS="0.12"   DJANGO="2.2"
+  - DJANGO_PAYMENTS="0.12"   DJANGO="3.0"
+  - DJANGO_PAYMENTS="0.12"   DJANGO="3.1"
+  - DJANGO_PAYMENTS="0.12"   DJANGO="master"
+  - DJANGO_PAYMENTS="master" DJANGO="2.2"
+  - DJANGO_PAYMENTS="master" DJANGO="3.0"
+  - DJANGO_PAYMENTS="master" DJANGO="3.1"
+  - DJANGO_PAYMENTS="master" DJANGO="master"
 matrix:
   include:
-    - python: "2.7"
-      env: DJANGO="1.11"
-    - python: "3.7"
-      sudo: required
-      dist: xenial
-      env: DJANGO="2.2"
-    - python: "3.7"
-      sudo: required
-      dist: xenial
-      env: DJANGO="master"
+    - python: "3.9"
+      env: DJANGO="master" DJANGO_PAYMENTS="master"
   allow_failures:
-    - python: "3.5"
-      env: DJANGO="2.2"
-    - python: "3.5"
-      env: DJANGO="master"
-    - python: "3.6"
-      env: DJANGO="2.2"
-    - python: "3.6"
-      env: DJANGO="master"
-    - python: "3.7"
-      sudo: required
-      dist: xenial
-      env: DJANGO="2.2"
-    - python: "3.7"
-      env: DJANGO="master"
-      sudo: required
-      dist: xenial
-  exclude:
-    - python: "3.4"
-      env: DJANGO="2.2"
-    - python: "3.4"
-      env: DJANGO="master"
+    - python: "3.8"
+      env: DJANGO_PAYMENTS="0.12"   DJANGO="master"
+    - python: "3.8"
+      env: DJANGO_PAYMENTS="master" DJANGO="master"
+    - python: "3.9"
+      env: DJANGO_PAYMENTS="master" DJANGO="master"
 after_success: codecov
 install: pip install tox-travis codecov
 script: tox
