--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,16 @@
 [tox]
-envlist = py27-django111, py{34,35,36,37}-django{111,20,22,_master}
+envlist = py{38,39}-django{22,30,31,_master}-django_payments{012,_master}
 
 [testenv]
 usedevelop=True
 deps=
     coverage
-    django111: django>=1.11a1,<1.12
-    django20: Django>=2.0a1,<2.1
     django22: Django>=2.2,<2.3
+    django30: Django>=3.0,<3.1
+    django31: Django>=3.1,<3.2
     django_master: https://github.com/django/django/archive/master.tar.gz
+    django_payments012: django-payments>=0.12.0,<0.13.0
+    django_payments_master: git+https://github.com/jazzband/django-payments#egg=django-payments
     mock
     pytest
     pytest-cov
@@ -16,16 +18,16 @@ commands=pytest --cov --cov-report=
 
 [travis]
 python =
-    2.7: py27
-    3.4: py34
-    3.5: py35
-    3.6: py36
-    3.7: py37
+    3.8: py38
+    3.9: py39
 unignore_outcomes = True
 
 [travis:env]
 DJANGO =
-    1.11: django111
-    2.0: django2.0
-    2.2: django2.2
+    2.2: django22
+    3.0: django30
+    3.1: django31
     master: django_master
+DJANGO_PAYMENTS =
+    0.12: django_payments012
+    master: django_payments_master
