--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,10 @@
 [coverage:run]
 branch = 1
 source = django_payments_razorpay
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    raise NotImplementedError
+    return NotImplemented
+    if TYPE_CHECKING:
