--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,32 @@
 [tox]
-envlist = py{38,39}-django{22,30,31,_master}-django_payments{012,_master}
+envlist =
+    fix_lint
+    py{39, 38}-django{31, 30, 22, master}-djangopayments{012, master}
 
 [testenv]
-usedevelop=True
-deps=
+usedevelop = true
+deps =
     coverage
-    django22: Django>=2.2,<2.3
-    django30: Django>=3.0,<3.1
-    django31: Django>=3.1,<3.2
-    django_master: https://github.com/django/django/archive/master.tar.gz
-    django_payments012: django-payments>=0.12.0,<0.13.0
-    django_payments_master: git+https://github.com/jazzband/django-payments#egg=django-payments
     mock
     pytest
     pytest-cov
-commands=pytest --cov --cov-report=
+    django22: Django>=2.2,<2.3
+    django30: Django>=3,<3.1
+    django31: Django>=3.1,<3.2
+    djangomaster: https://github.com/django/django/archive/master.tar.gz
+    djangopayments012: django-payments>=0.12,<0.13.0
+    djangopaymentsmaster: git+https://github.com/jazzband/django-payments#egg
+commands =
+    pytest --cov --cov-report=
 
-[travis]
-python =
-    3.8: py38
-    3.9: py39
-unignore_outcomes = True
-
-[travis:env]
-DJANGO =
-    2.2: django22
-    3.0: django30
-    3.1: django31
-    master: django_master
-DJANGO_PAYMENTS =
-    0.12: django_payments012
-    master: django_payments_master
+[testenv:fix_lint]
+description = format the code base to adhere to our styles, and complain about what we cannot do automatically
+passenv =
+    *
+basepython = python3.9
+skip_install = true
+deps =
+    pre-commit>=2
+commands =
+    pre-commit run --all-files --show-diff-on-failure
+    python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
