--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,32 @@
 [tox]
 envlist =
     fix_lint
-    py{39, 38}-django{31, 30, 22, master}-djangopayments{012, master}
+    py{3.9, 3.8}-django{master, 2.2, 3.1, 3.0}-django_payments{master, 0.12}
 
 [testenv]
+passenv =
+    CI_RUN
+    HOME
+    PIP_*
+    PYTEST_*
+    TERM
+basepython =
+    py3.8: python3.8
+    py3.9: python3.9
 usedevelop = true
 deps =
     coverage
+    django2.2: django>=2.2,<2.3
+    django3.0: django>=3,<3.1
+    django3.1: django>=3.1,<3.2
+    djangomaster: https://github.com/django/django/archive/master.tar.gz
+    django_payments0.12: django-payments>=0.12,<0.13.0
+    django_paymentsmaster: git+https://github.com/jazzband/django-payments#egg=django-payments
     mock
     pytest
     pytest-cov
-    django22: Django>=2.2,<2.3
-    django30: Django>=3,<3.1
-    django31: Django>=3.1,<3.2
-    djangomaster: https://github.com/django/django/archive/master.tar.gz
-    djangopayments012: django-payments>=0.12,<0.13.0
-    djangopaymentsmaster: git+https://github.com/jazzband/django-payments#egg
 commands =
-    pytest --cov --cov-report=
+    pytest
 
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
